--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
   font-size: 60%;
 }
 
+.available-tick {
+  font-size: 160%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
