--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.App * {
+  font-size: 15px;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -19,16 +23,26 @@
   color: white;
 }
 
+.desk-label {
+  color: rgb(158, 158, 158);
+  font-size: 95%;
+}
+
+.desk-name {
+  font-size: 200%;
+}
+
 .App-link {
   color: #61dafb;
 }
 
 .debug {
-  font-size: 60%;
+  font-size: 0.2rem;
 }
 
 .available-tick {
-  font-size: 3.1em;
+  width: 4rem;
+  height: 4rem;
   color: green;
 }
 
