#9 Available tick now pulses (allows an at-a-glance method to see if wpe is working or not)

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   width: 4rem;
   height: 4rem;
   color: green;
+  animation: tick-pulse infinite 2s linear;
 }
 
 .booking-prompt {
@@ -63,15 +64,23 @@
   font-size: 110%;
 }
 
-.booking-prompt .booking-qr {
-  
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes tick-pulse {
+  0% {
+    transform: scale(1.0);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1.0);
   }
 }
