--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,24 @@
   font-size: 0.2rem;
 }
 
+.available-tick, .network-error {
+  animation: pulse infinite 2s linear;
+}
+
 .available-tick {
   width: 4rem;
   height: 4rem;
   color: green;
-  animation: tick-pulse infinite 2s linear;
+}
+
+.network-error {
+  width: 7rem;
+  height: 7rem;
+  color: red;
+}
+
+.network-error-wrapper {
+  height: 30vw;
 }
 
 .booking-prompt {
@@ -73,7 +86,7 @@
   }
 }
 
-@keyframes tick-pulse {
+@keyframes pulse {
   0% {
     transform: scale(1.0);
   }
